<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IMC App</string>
    <string name="calculate">Calculate</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone</string>
    <string name="weight">Weight (Kg)</string>
    <string name="height">Height (m)</string>
    <string name="result">Result: %1$s</string>
    <string name="nit">NIT</string>
    <string name="birth_date">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="go_back">Back</string>
    <string name="fab_content_desc">New</string>
    <string name="send">Send</string>
    <string name="new_user">New User</string>
    <string name="save">Save</string>
    <string name="app_version_info">V0.1.0 - 2021</string>
    <string name="imc_count_string">Number of IMC Records: %1$s</string>
</resources>