<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".IMCActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:autofillHints="weight"
        android:inputType="numberDecimal"
        android:hint="@string/weight"/>

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:autofillHints="height"
        android:inputType="numberDecimal"
        android:hint="@string/height"/>
    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/calculate" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <TextView
            android:layout_height="fill_parent"
            android:lineSpacingExtra="12dp"
            android:textSize="12sp"
            android:layout_width="fill_parent"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:gravity="bottom|center_horizontal"
            android:text="@string/app_version_info"
            android:textAlignment="center"/>
    </RelativeLayout>

</LinearLayout>